feat: Add admin interface with dashboard, PDF ingestion, and chat test functionalities, supported by new database and ingestion pipeline modules.

--- a/law-rag-backend/static/admin.html
+++ b/law-rag-backend/static/admin.html
@@ -357,7 +357,7 @@
   <div id="toast-container" class="toast-container"></div>
 
   <!-- Scripts -->
-  <script src="/static/admin.js"></script>
+  <script src="/static/admin.js?v=2"></script>
 </body>
 
 </html>
